--- a/pom.xml
+++ b/pom.xml
@@ -73,12 +73,12 @@
     <snapshotRepository>
         <id>InternalSnapshots</id>
         <name>Internal Snapshots</name>
-        <url>http://localhost:8081/nexus/content/repositories/snapshots/</url>
+        <url>http://54.163.206.18:8080/nexus-latest/content/repositories/raviteja/</url>
     </snapshotRepository>
     <repository>
         <id>InternalReleases</id>
         <name>Internal Releases</name>
-        <url>http://localhost:8081/nexus/content/repositories/releases/</url>
+        <url>http://54.163.206.18:8080/nexus-latest/content/repositories/ravi/</url>
     </repository>
 </distributionManagement>
 
